fix question text wrap

--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -15,7 +15,7 @@
 .questiion-text {
   width: 90vw;
   max-width: 900px;
-  height: 100px;
+  min-height: 100px;
   padding: 20px 10px 0 10px;
   text-wrap: wrap;
   background: #393E46;
